<resources>
    <!--comment text-->
    <!--<string name="username">qiyue</string>-->
    <!--qiyue-->
    <string name="username">liuxudong</string>
    <string name="password">123456</string>

    <string name="app_name">力迈云</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_paw">请输入密码</string>
    <string name="login_btn">登录</string>
    <string name="una_pwd_empty">用户名或密码为空</string>
    <string name="home_message">首页</string>
    <string name="home_cmri">通讯录</string>
    <string name="home_app">应用</string>
    <string name="home_my">我的</string>
    <string name="titlt_IP">请输入域名或IP</string>
    <string name="tv_ip_address">IP：</string>
    <string name="cancle" >取消</string>
    <string name="comfirm">确定</string>
    <string name="eqipment_monitoring">设备监控</string>
    <string name="data_board">数据看板</string>
    <string name="warning_message">警报信息</string>
    <string name="new_message">最新消息</string>
    <string name="office_system">办公系统</string>
    <string name="os_oa">OA</string>
    <string name="easy_oa">办公更轻松</string>
    <string name="os_erp">ERP</string>
    <string name="financal_review">物料/财务查看更清晰</string>
    <string name="os_mes">MES</string>
    <string name="easy_product">生产执行更便捷</string>
    <string name="os_plm">PLM</string>
    <string name="process_control">流程控制更安全！</string>
    <string name="equipment_monitoring">设备监控</string>
    <string name="back">返回</string>
    <string name="inject_title">立体注塑机</string>
    <string name="tenant">租户ID：</string>
    <string name="tenant_id">XXXXXXXXXXXXX</string>
    <string name="inject_machine">注塑机</string>
    <string name="company_name">北京力迈金诚科技有限公司</string>
    <string name="user_mail">xudong_liu@139.com</string>
    <string name="collect">收藏</string>
    <string name="remind">提醒</string>
    <string name="red_packet">红包</string>
    <string name="setting_up">设置</string>
    <string name="dashboards">奇跃仪表盘</string>
    <string name="admin">管理员</string>
    <string name="eqipment_detil">数据详情</string>
    <string name="data_empty">暂无数据</string>
    <string name="tv_title">主题</string>
    <string name="time">2017-06-06</string>
    <string name="count">1000000</string>
    <string name="line_chart">面板详情</string>
    <string name="version">版本</string>
    <string name="plugin">插件</string>
    <string name="exit_app">退出登录</string>
    <string name="auto_login">自动登录</string>
    <string name="AR">AR工厂</string>
    <string name="intelligent_identification">智能识别</string>
    <string name="DM">数据挖掘</string>
    <string name="BD">智能分析</string>
    <string name="inject_alarm">立体注塑机报警</string>
    <string name="alarm_detil">立体注塑机于20时39分因为机器电流不稳定造成了机器故障</string>
    <string name="flow_path_alarm">流程警报</string>
    <string name="alarm_message">警报信息</string>
    <string name="wanted">公告信息</string>
    <string name="supervision">任务督办</string>
    <string name="headline">主题：</string>
    <string name="supervision_time">时间：</string>
    <string name="sup_status">状态：</string>
    <string name="sup_start">开始</string>
    <string name="assigner">分配人：</string>
    <string name="someone">某某某</string>
    <string name="easy_sup">查看任务更快捷</string>
    <string name="chiose_status">更换状态</string>
    <string name="content">内容：</string>
    <string name="supervision_detitls">任务详情</string>
    <string name="create_time">创建时间：</string>
    <string name="end_time">到期时间</string>
    <string name="tv_content">内容</string>
    <string name="create_supervision">创建任务</string>
    <string name="tv_description">描述</string>
    <string name="tv_list">列表</string>
    <string name="click_change_status">点击选择状态</string>
    <string name="tv_create">创建</string>
    <string name="video_monitoring">视频监控</string>


</resources>
