<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="107dp"
    android:background="@mipmap/all_item_background"
    android:gravity="center">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="13dp"
        android:src="@mipmap/default_icon" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginLeft="93dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inject_title"
            android:textColor="#333333"
            android:textSize="21sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tenant"
                android:textColor="#8888"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_teanant_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tenant_id"
                android:textColor="#88888888"
                android:textSize="16sp"
                android:ellipsize="marquee"
                android:singleLine="true"/>

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/tv_device_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:text="@string/inject_machine"
        android:textColor="#3783d2"
        android:textSize="18sp" />

</RelativeLayout>