<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="#3783d2">


        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="21.7dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/back_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5.3dp"
                android:text="@string/back"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_line_chart_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/alarm_message"
            android:textColor="#ffffff"
            android:textSize="22.7sp" />


    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:background="@mipmap/all_item_background"
        android:gravity="center">


        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="13dp"
            android:src="@mipmap/equip_alarm" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="93dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inject_alarm"
                android:textColor="#333333"
                android:textSize="21sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:maxLines="2"
                android:text="@string/alarm_detil"
                android:textColor="#8888"
                android:textSize="16sp" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:text="@string/time"
            android:textColor="#3783d2"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:background="@mipmap/all_item_background"
        android:gravity="center">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="13dp"
            android:src="@mipmap/flow_path_icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="93dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flow_path_alarm"
                android:textColor="#333333"
                android:textSize="21sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:maxLines="2"
                android:text="@string/alarm_detil"
                android:textColor="#8888"
                android:textSize="16sp" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:text="@string/time"
            android:textColor="#3783d2"
            android:textSize="18sp" />

    </RelativeLayout>
</LinearLayout>