<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/back_board"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/chiose_status"
        android:textSize="24sp"
        android:layout_margin="10dp"
        android:textColor="#999999"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dddddd"/>



        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:divider="#dddddd"
            android:dividerHeight="1dp"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dddddd"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_supervision_cancle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/cancle"
            android:textSize="20sp"
            android:textColor="@drawable/dialog_text_selector"
            android:gravity="center"
            android:background="@drawable/tv_press_selector" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#dddddd"/>
        <TextView
            android:id="@+id/btn_supervision_comfirm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/comfirm"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@drawable/dialog_text_selector"
            android:background="@drawable/tv_press_selector" />

    </LinearLayout>

</LinearLayout>